# Cronometro-com-kivy

./: .gitignore  Dockerfile  Dockerfile.exemplo  README.md  buildozer.spec  hot_reload.py  main.py  pyproject.toml
app/: cronometro.kv  cronometro.py
