[tool.poetry]
name = "cronômetro-com-kivy"
version = "0.1.0"
description = ""
authors = ["Thi <tiagoqueirozgoncalves100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.1.0"
kivymd = "^1.0.2"
plyer = "^2.0.0"

[tool.poetry.dev-dependencies]
buildozer = "^1.2.0"
Cython = "^0.29.24"
watchdog = "^2.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
