[tool.poetry]
name = "cronômetro-com-kivy"
version = "0.1.0"
description = ""
authors = ["Thi <tiagoqueirozgoncalves100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.1.0"
kivymd = "^1.0.2"
plyer = "^2.0.0"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.6"
buildozer = "^1.4.0"
Cython = "^0.29.32"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
